# web-button-watcher

./: .coveragerc  .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  WebButtonWatcher.spec  build.py  pyproject.toml  pytest.ini  release.sh  requirements.txt  run.py  setup.cfg  setup.py  web_button_watcher.spec
.github/workflows/: build.yml  publish.yml  release.yml  test.yml  tests.yml
resources/: WebButtonWatcher.entitlements  icon.icns
scripts/: webbuttonwatcher-cli  webbuttonwatcher-gui
src/web_button_watcher/: __init__.py
src/web_button_watcher/core/: __init__.py  button_monitor.py  driver_manager.py  monitor.py
src/web_button_watcher/interface/: __init__.py  cli.py  gui.py
src/web_button_watcher/tests/: test_cli.py  test_gui.py  test_integration.py  test_monitor.py  test_notifier.py  test_settings.py
src/web_button_watcher/tests/fixtures/: test_page.html
src/web_button_watcher/utils/: notifier.py  settings.py
webbuttonwatcher/: __init__.py
webbuttonwatcher/core/: __init__.py  button_monitor.py  button_selector.py  driver_manager.py  monitor_thread.py
webbuttonwatcher/interface/: cli.py  gui.py
webbuttonwatcher/tests/: conftest.py  test_cli.py  test_gui.py  test_integration.py  test_monitor.py  test_notifier.py  test_settings.py
webbuttonwatcher/utils/: __init__.py  notifier.py  settings.py
